apps/jupyter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: jupyter
spec:
  replicas: 1

  # Evita tener dos pods intentando usar simultáneamente
  # la misma GPU y el mismo volumen.
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: jupyter

  template:
    metadata:
      labels:
        app: jupyter

    spec:
      runtimeClassName: nvidia
      enableServiceLinks: false

      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: OnRootMismatch

      containers:
        - name: jupyter
          image: quay.io/jupyter/pytorch-notebook:cuda13-latest
          imagePullPolicy: IfNotPresent

          securityContext:
            runAsUser: 1000
            runAsGroup: 100
            allowPrivilegeEscalation: false

          ports:
            - name: http
              containerPort: 8888

          resources:
            requests:
              memory: 2Gi
              cpu: "1"
            limits:
              memory: 12Gi
              cpu: "8"
              nvidia.com/gpu: 1

          volumeMounts:
            - name: workspace
              mountPath: /home/jovyan/work

      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: jupyter-workspace
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: jupyter
spec:
  type: ClusterIP

  selector:
    app: jupyter

  ports:
    - name: http
      port: 8888
      targetPort: 8888
